--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,23 +8,10 @@ micronaut.router.static-resources.swagger.mapping=/swagger/**
 micronaut.server.port=8082
 datasources.default.url=jdbc:postgresql://localhost:5432/componentDB?sslmode=disable
 datasources.default.username=postgres
-datasources.default.password=Jahnavi@2002
+datasources.default.password=
 
 kafka.producer.configuration.bootstrap.servers= localhost:9092
 kafka.producer.configuration.bootstrap.key.serializer= org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.configuration.bootstrap.value.serializer= org.apache.kafka.common.serialization.StringSerializer
-kafka.topic.name=component3
+kafka.topic.name=component1
 
-#jpa.generate-ddl= 'false'
-#jpa.database= POSTGRESQL
-#jpa.properties.hibernate.format_sql= true
-#jpa.properties.hibernate.format_order_inserts= true
-#jpa.properties.hibernate.format_order_updates=true
-#jpa.properties.hibernate.format_jdbc.batch_size= 100
-#jpa.properties.hibernate.format_jdbc.lob.non_contextual_creation= 'true'
-#jpa.properties.org.hibernate.flushMode= COMMIT
-#jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
-#jpa.hibernate.ddl-auto= create
-#jpa.show-sql= true
-#sql.init.continue-on-error= 'false'
-#sql.init.platform= postgresql
